# ChangeLog for dev-ruby/sqlite3-ruby
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/ChangeLog,v 1.19 2007/05/24 14:05:35 flameeyes Exp $

  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
  sqlite3-ruby-1.2.1.ebuild:
  Add ~x86-fbsd keyword, as per bug #168110.

  19 May 2007; Markus Rothe <corsair@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Added ~ppc64; bug #176308

  27 Apr 2007; Matti Bickel <mabi@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  ~ppc keyword readded (bug #168110)

  08 Apr 2007; Peter Weller <welp@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Keyworded ~amd64 wrt bug 168110

  27 Mar 2007; Raúl Porcel <armin76@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Add ~ia64 wrt bug 168110

  04 Mar 2007; Marius Mauch <genone@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Replacing einfo with elog

  23 Feb 2007; Ferris McCormick <fmccor@gentoo.org>
  sqlite3-ruby-1.2.1.ebuild:
  Add ~sparc keyword --- Bug #168110 --- and installs with USE='doc swig';
  testing seems good for tests that can be run (some require 'flexmock' which
  does not exist).

*sqlite3-ruby-1.2.1 (23 Feb 2007)

  23 Feb 2007; Richard Brown <rbrown@gentoo.org> +sqlite3-ruby-1.2.1.ebuild:
  Version bump, stop using gem.

  08 Oct 2006; Timothy Redaelli <drizzt@gentoo.org>
  sqlite3-ruby-1.1.0.ebuild:
  Added ~x86-fbsd keyword.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> sqlite3-ruby-1.1.0.ebuild:
  Mark 1.1.0 stable on ia64. #138323

  08 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  sqlite3-ruby-1.1.0.ebuild:
  ppc stable

  06 Jun 2006; Simon Stelling <blubb@gentoo.org> sqlite3-ruby-1.1.0.ebuild:
  stable on amd64

  11 May 2006; Ferris McCormick <fmccor@gentoo.org>
  sqlite3-ruby-1.1.0.ebuild:
  Stable on sparc (Bug #133003). (Required dependency).

  08 May 2006; Seemant Kulleen <seemant@gentoo.org>
  sqlite3-ruby-1.1.0.ebuild:
  Keyworded for ~amd64

  07 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>