@@ -1,4 +1,4 @@
 DIST sqlite3-ruby-1.2.1.tar.bz2 83105 RMD160 de3042471a2e021e299c79c189fb35eb364f0128 SHA1 68d40bc263d36fed256ca74954c6894760d72ebd SHA256 7b1ebbf0597d5d020eae73ca21e358450db47691bab6a18ab8354f22bca36952
-EBUILD sqlite3-ruby-1.2.1.ebuild 1523 RMD160 9f3c77a15b868ea126c3bfc24ffc58d7d123e020 SHA1 ebf773f703072000093b349222ada384ccf04775 SHA256 afcd39a45c6e52cc887c534339848e92511a2491560da92466bc1bc38222457a
-MISC ChangeLog 2522 RMD160 3bc68f97f604dac72d3395815e12b8f4d5b14b55 SHA1 08688a280fdb3592fda7d18bb9d888588adbd23a SHA256 1cd9de24b509d9f791350e5244a1cbcace079210874a2381d8cdb25f4f981984
+EBUILD sqlite3-ruby-1.2.1.ebuild 1545 RMD160 1851bb67e5f8530c66b17ac8720eedf482a20841 SHA1 3602278741c0924e33c20e51bd29d6274e8e3117 SHA256 646943e86e30e3ce2cf86f96a4fb8ce5a5b0c884ab27cac712343cc68dc27138
+MISC ChangeLog 2756 RMD160 09e7149e6a26895a0ec709b68a032e732eb1988f SHA1 7f14370efa9168daf7f5b5c1d156f0613b7406ad SHA256 ddb2f5ec6b88da8b8692efb7890a992a51cd08d471ee9acc7017b239ab18bf4d
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
